<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="5dp">

    <TextView
        android:id="@+id/tvUpvotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:text="@string/upvotes_hint"
        android:layout_marginLeft="6dp" />

    <RelativeLayout
        android:id="@+id/layout_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="6dp"
        android:layout_toLeftOf="@id/ivThumbnail"
        android:layout_toRightOf="@id/tvUpvotes"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/reddit_post_title_text"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvDomain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tvTitle"
            android:layout_below="@id/tvTitle"
            android:text="@string/reddit_post_domain_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvComments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tvDomain"
            android:layout_below="@id/tvDomain"
            android:layout_marginTop="8dp"
            android:text="@string/reddit_post_num_comments_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvSubreddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvComments"
            android:layout_alignBottom="@+id/tvComments"
            android:layout_alignEnd="@+id/tvTitle"
            android:layout_alignRight="@+id/tvTitle"
            android:text="@string/reddit_post_subreddit_text"
            android:textSize="12sp" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/ivThumbnail"
        android:layout_width="65dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:maxWidth="65dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_marginRight="2dp"
        android:src="@mipmap/reddit_logo" />

</RelativeLayout>