<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/reddit_post_title_text" />

        <RelativeLayout
            android:id="@+id/author_time_layout"
            android:layout_below="@id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/reddit_post_author_text" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvAuthor"
                android:layout_marginLeft="10dp"
                android:text="Posted at 12:45" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author_time_layout"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:text="@string/reddit_post_description_text" />

        <ImageView
            android:id="@+id/ivUrlImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDescription"
            android:layout_marginTop="15dp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/comments_header"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/lvComments"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>
